compiler/tests/success/slh/x86-64/spill_mmx.jazz
export
fn main(reg u64 x) -> reg u64 {
    #[nospill] reg u64 ms;
    ms = #init_msf();

    #[nospill, mmx] reg u64 _ms;
    _ms = #mov_msf(ms);

    ms = #mov_msf(_ms);

    x = #protect(x, ms);
    x = x;
    return x;
}
