compiler/tests/fail/arm-m4/rsb_imm_too_large.jazz
export
fn main(reg u32 x) {
    x = #RSB(x, 0x0000caca);
    [x] = x;
}
